--- a/examples/nlp/token_classification/conf/punctuation_capitalization_config.yaml
+++ b/examples/nlp/token_classification/conf/punctuation_capitalization_config.yaml
@@ -18,11 +18,11 @@ pretrained_model: null # pretrained Punctuation and Capitalization model from li
 # Punctuation_Capitalization_with_BERT_base_uncased or Punctuation_Capitalization_with_DistilBERT_base_uncased
 # or your_model.nemo
 trainer:
-  gpus: 1 # the number of gpus, 0 for CPU
+  gpus: 2 # the number of gpus, 0 for CPU
   num_nodes: 1
   max_epochs: 3
   max_steps: null # precedence over max_epochs
-  accumulate_grad_batches: 1 # accumulates grads every k batches
+  accumulate_grad_batches: 16 # accumulates grads every k batches
   gradient_clip_val: 0.0
   amp_level: O0 # O1/O2 for mixed precision
   precision: 16 # Should be set to 16 for O1 and O2, default is 16 as PT ignores it when am_level is O0
@@ -93,7 +93,7 @@ model:
     special_tokens: null
 
   language_model:
-    pretrained_model_name: bert-base-uncased
+    pretrained_model_name: distilroberta-base
     lm_checkpoint: null
     config_file: null # json file, precedence over config
     config: null
